# forecast_performance

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
notebooks/: 00_visualize.ipynb  01_benchmarks.ipynb  01_deterministic.ipynb  02_deterministic.ipynb  02_probabilistic.ipynb  03_ensemble.ipynb  04_probabilistic.ipynb
performance/: __init__.py  decorators.py  forecast_performance.py  pandas_forecast.py  plotly_forecasting.py  plotply_defaults.py  results.py
performance/metrics/: __init__.py  accessors.py  base.py  deterministic.py  probabilistic.py
tests/: conftest.py  test_deterministic.py  test_forecast_performance.py  test_missing_data.py  test_normalize.py  test_pandas_forecast.py  test_plotting.py  test_probabilistic.py  test_results.py
tests/test_datasets/: det.parquet  test_datasets_aux.ipynb
tests/test_datasets_daily/: det.parquet  ens.parquet  obs.parquet  prob.parquet  test_datasets_daily_aux.ipynb
tests/test_datasets_hourly/: deterministic.csv  observed.csv  test_datasets_hourly_aux.ipynb
