[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-performance"
version = "0.4.0"
description = "Evaluation metrics and diagnostics for deterministic and probabilistic forecasts"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "ipympl",
    "ipywidgets",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pyarrow",
    "fastparquet",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["performance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["performance"]
omit = ["tests/*"]
