[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-performance"
version = "0.5.0"
description = "Evaluation metrics and diagnostics for deterministic and probabilistic forecasts"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "FORESIGHT", email = "jose.matos@tecnico.ulisboa.pt" },
]
keywords = ["forecast", "verification", "metrics", "crps", "ensemble", "probabilistic", "hydrology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "ipympl",
    "ipywidgets",
    "plotly",
]

[project.urls]
Homepage = "https://foresight.tecnico.ulisboa.pt/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pyarrow",
    "fastparquet",
]
build = [
    "build>=1.0",
    "twine>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["performance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["performance"]
omit = ["tests/*"]
